[project]
name = "sungsoo-ahn-github-io"
version = "0.1.0"
description = "Academic homepage for Sungsoo Ahn (KAIST Graduate School of AI)"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nbconvert",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.0",
    "pymol-open-source>=3.2.0a0",
    "pymupdf>=1.26.7",
    "pyyaml",
    "requests>=2.32.5",
    "scholarly",
    "scipy>=1.17.0",
]
